- wicket-arquilian / wicket-cdi-1.1 : Enable Junit Vintage Engine to run old Testrunners - BaseWicketTester.java: remove dependency on AssertionFailedException - global: use AssertionError instead of AssertionFailedError - updated Templates to use Junit 5 imports and classes - remove opentest4j as a dependency of wicket-util again - update cdi-unit to version 4.1.0 from 4.0.2 - Excluded Tests tagged with SLOW from surefire plugin